fix homepage overflow issue

--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,10 @@
 @import 'project-pages';
 
 .home-back {
+    width: 100%;
+}
+
+.back {
     overflow: hidden;
 }
 
